[package]
name = "tweep"
version = "0.2.5"
authors = ["Caranatar <caranatar@riseup.net>"]
edition = "2018"
license = "MIT"
description = "Parser for the Twee 3 interactive fiction format"
homepage = "https://github.com/caranatar/tweep"
repository = "https://github.com/caranatar/tweep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
warning-names = []
issue-context = []
full-context = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"