[package]
name = "tweep"
version = "0.2.5"
authors = ["Caranatar <caranatar@riseup.net>"]
edition = "2018"
license = "MIT"
description = "Parser for the Twee 3 interactive fiction format"
homepage = "https://github.com/caranatar/tweep"
repository = "https://github.com/caranatar/tweep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
warning-names = []
full-context = ["bimap"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bimap = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"